--- a/style.css
+++ b/style.css
@@ -47,3 +47,20 @@ hr {
 	border-color: #9B6BB9;
 	border-width: 4px; 
 }
+
+.footer {
+ position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #9B6BB9;
+  color: white;
+  text-align: center;
+
+}
+
+.footer, p {
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 1rem;  
+}
